# cellmap-flow

./: .buildinfo  .coveragerc  .gitignore  BBX_IMPLEMENTATION.md  BBX_USAGE_GUIDE.md  CLI_STANDARDIZATION.md  CLI_V2_README.md  FINETUNING_CHANGES.md  HITL_FINETUNING_README.md  HITL_TEST_DATA_README.md  MANIFEST.in  Makefile  Models.md  README.md  analyze_corrections.py  bioimagezoo_processor.py  check.py  check.yaml  check2.yaml  check_app.sh  check_training_loss.py  cli.html  cli.py  cli_command.html  cli_reference.html  compare_finetuned_predictions.py  conf.html  conf.ipynb  custom_script.html  dinov3_finetune.py  example_virtual_n5.py  example_virtual_n5_david.py  example_virtual_n5_generic.py  example_virtual_n5_marwan.py  generate_mito_corrections.py  genindex.html  huggingface.html  index.html  install.html  jrc_mus-salivary-1_mito.yaml  (+25 more)
.github/: copilot-instructions.md
.github/workflows/: docs.yaml  publish.yaml  test-coverage.yml
_sources/: cli.rst.txt  huggingface.rst.txt  index.rst.txt  overview.rst.txt  scripts.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/cellmap_flow/: index.rst.txt
_static/: custom.css
autoapi/: index.html
autoapi/cellmap_flow/: index.html
autoapi/cellmap_flow/blockwise/: index.html
autoapi/cellmap_flow/cli/: index.html
autoapi/cellmap_flow/dashboard/: index.html
autoapi/cellmap_flow/globals/: index.html
autoapi/cellmap_flow/image_data_interface/: index.html
autoapi/cellmap_flow/inferencer/: index.html
autoapi/cellmap_flow/models/: index.html
autoapi/cellmap_flow/norm/: index.html
autoapi/cellmap_flow/post/: index.html
bbx/: create_and_export_bboxes.py  exported_bboxes.json  validate_bbx.py
cell/: get_model.py  model.py  scrit_f.yaml
cellmap_flow/: __init__.py  bioimagezoo_processor.py  cli.py  core.py  data.py  data_server.py  example_virtual_n5.py  example_virtual_n5_generic.py  example_virtual_n5_generic_using_python_script copy.py  example_virtual_n5_generic_using_python_script.py  globals.py  image_data_interface.py  inferencer.py  multiple_cli.py  n_cli.py  server.py  server_cli.py  settings.py  tmp.py
cellmap_flow/blockwise/: __init__.py  blockwise_processor.py  cli.py  multiple_cli.py
cellmap_flow/cli/: cli.py  fly_model.py  multiple_cli.py  multiple_yaml_cli.py  server_cli.py  viewer_cli.py  yaml_cli.py
cellmap_flow/commands/: get.py  kill.py  ls.py  start.py
cellmap_flow/dashboard/: PIPELINE_BUILDER.md  app.py  bbx_generator.py  finetune_utils.py  package.json  state.py
cellmap_flow/finetune/: __init__.py  cli.py  correction_dataset.py  dataset.py  finetune_cli.py  finetune_job_manager.py  finetuned_model_templates.py  job_manager.py  lora_trainer.py  lora_wrapper.py  model_templates.py  target_transforms.py  test_target_transforms.py  trainer.py
cellmap_flow/models/: agent_model_selector.py  cellmap_models.py  model_app_config.py  model_merger.py  model_registry.py  models_config.py  run.py
cellmap_flow/norm/: input_normalize.py
cellmap_flow/post/: postprocessors.py
cellmap_flow/templates/: iframe.html
cellmap_flow/utils/: __init__.py  bsub_utils.py  bsub_utils_refactored.py  cli_utils.py  config_utils.py  data.py  ds.py  generate_neuroglancer.py  import_utils.py  job_extensions.py  load_py.py  neuroglancer_utils.py  plugin_manager.py  scale_pyramid.py  serialize_config.py  serilization_utils.py  visualization.py  web_utils.py
dinov3_playground/: README.md  __init__.py  data_processing.py  dinov3_core.py  dinov3_finetune.py  dinov3_finetune_original.py  model_training.py  models.py  test_imports.py  visualization.py
docs/: COVERAGE.md  finetuning.md  requirements.txt  sparse_annotation_workflow.md
docs/source/: cli_command.rst  cli_reference.rst  conf.py  custom_script.rst  index.rst  install.rst  modules.rst  plugins.rst  post.rst  roadmap.rst  scripts.rst  tutorial.rst  yaml_config.rst
example/: check_norm.py  dinov3_example.py  example_pipeline.yaml  generate_slider.py  model_setup04.py  model_spec.py  model_spec_affinities.py  model_spec_run07.py  model_spec_run07_7hk.py  models.yaml  multiple_yaml.yaml  nuc_sal_1.yaml  omnx_model_converted.py  sal_1_mito.yaml  serialization_json_norm.py  server_check.py  tensorflow_acrlsd.py  tensorflow_lsd.py
example/cellmap/: 20240114_fly.sh  20240114_submit_fly.sh
example/example_norm/: custom_code_20250131_164003.py  custom_code_20250131_164059.py  custom_code_20250131_164124.py  custom_code_20250131_164249.py  custom_code_20250131_172959.py
models/: models.yaml
old/: backup_pyproject.toml  bioimagezoo.ipynb  bioimagezoo_minimal.py  canoliculi_click.py  convert_dacapo_to_bioimagezoo.py  convert_dacapo_to_onnx.py  example_virtual_n5_bioimagezoo.py  example_virtual_n5_canoliculi.py  example_virtual_n5_canoliculi_ilastik.py  example_virtual_n5_david.py  gunicorn_gpu_config.py  just_neuroglancer.py  pyproject.toml  temp.py
scripts/: combine_sparse_corrections.py  example_sparse_annotation_workflow.py  fix_correction_zarr_structure.py  fs_visibility_probe.py  generate_sparse_corrections.py  generate_sparse_point_corrections.py  generate_test_corrections.py  host_http.py  host_http_writable.py  host_minio.py  host_minio.sh  host_minio_simple.py  inspect_corrections.py  minio_create_zarr.py  minio_sync.py  setup_minio_clean.py  test_dataset.py  test_end_to_end_finetuning.py  test_finetuned_inference.py  test_lora_wrapper.py  test_model_inference.py  validate_pipeline_components.py
src/cellmap_flow/: cli.py  example_virtual_n5_generic.py  image_data_interface.py  inferencer.py
tests/: README.md  TESTING_SUMMARY.md  conftest.py  coverage_utils.py  run_tests.py  test_data_utils.py  test_globals.py  test_image_data_interface.py  test_input_normalize.py  test_processing.py  test_script.py
tests/fixture/: fake_model_script.py  test_globals.py  test_script.py
tests/script_test/: fake_model_script.py  test_script.py  test_serialization.py
tests/tmp.zarr/: .zattrs
tmp/: cehck_res.py  check.py  check.yaml  check_gs.yaml  check_gs_2.yaml  check_gs_fish.yaml  check_gs_fish_2.yaml  check_server.py  model_config.py
(+146 files in other folders)
