[project]
name = "cellmap-flow"
description = "Realtime prediction using neuroglancer"
readme = "README.md"
requires-python = ">=3.11,<4.0"
version = "0.1.7"
license = { text = "BSD 3-Clause License" }
authors = [
    { email = "ackermand@hhmi.org", name = "David Ackerman" },
    { email = "zouinkhim@hhmi.org", name = "Marwan Zouinkhi"},
]

dependencies = [
    "pymorton",
    "numpy",
    "PyYAML",
    "gunicorn",
    "fastremap",
    "fastmorph",
    "flask",
    "flask-cors",
    "tensorstore",
    "funlib.geometry",
    "marshmallow",
    "scikit-image",
    "flasgger",
    "numcodecs==0.15.0",
    "zarr==2.18.4",
    "xarray==2024.7.0",
    "h5py",
    "s3fs",
    "torch",    
    "universal_pathlib",
    "mwatershed",
    "funlib.math",
    "neuroglancer",
    "pydantic",
    "funlib.persistence @ git+https://github.com/funkelab/funlib.persistence.git",
    ]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
dacapo = ["dacapo-ml"]
cellpose = ["cellpose==3.1.1.1"]
bioimageio = ["bioimageio.core[onnx,pytorch]==0.7.0"]
test = ["pytest", "pytest-cov", "pytest-lazy-fixtures", "coverage[toml]", "pytest-html", "pytest-xdist"]
dev = [
    "black",
    "mypy",
    "pdbpp",
    "rich",
    "ruff",
    "pre-commit",
]
docs = [
    "sphinx-autodoc-typehints",
    "sphinx-autoapi",
    "sphinx-click",
    "sphinx-rtd-theme",
    "myst-parser",
    "nbsphinx",
    "myst_nb",
    "jupytext",
]

postprocess = ["edt",
    "mwatershed @ git+https://github.com/pattonw/mwatershed",
    "funlib.math @ git+https://github.com/funkelab/funlib.math.git",]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["ignore"]

[tool.setuptools.package-data]
"cellmap_flow.dashboard" = ["templates/*.html", "templates/_*.html", "static/css/*.css", "static/js/*.js", "static/img/*"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"


[project.scripts]
cellmap_flow = "cellmap_flow.cli.cli:cli"
cellmap_flow_server = "cellmap_flow.cli.server_cli:cli"
cellmap_flow_multiple = "cellmap_flow.cli.multiple_cli:main"
cellmap_flow_fly = "cellmap_flow.cli.fly_model:main"
cellmap_flow_yaml = "cellmap_flow.cli.multiple_yaml_cli:main"
cellmap_flow_blockwise_processor = "cellmap_flow.blockwise.cli:cli"
cellmap_flow_blockwise = "cellmap_flow.blockwise.cli:cli"

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "-v",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["cellmap_flow"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
    "*/venv/*",
    "*/virtualenv/*",
    "*/site-packages/*",
    "setup.py",
    "conftest.py",
]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"
show_contexts = true

[tool.coverage.xml]
output = "coverage.xml"
