[project]
authors = [{name = "David Ackerman", email = "ackermand@janelia.hhmi.org"}]
description = "Add a short description here"
name = "cellmap-flow"
requires-python = ">= 3.11,<=3.12.1"
version = "0.1.0"
dependencies = ["neuroglancer>=2.40.1,<3", "funlib-persistence==0.4.0", "torch==2.5.1+cu121"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

pypi-options.extra-index-urls = ["https://download.pytorch.org/whl/cu121"]

[tool.pixi.pypi-dependencies]
cellmap_flow = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
scikit-image = ">=0.24.0,<0.25"
tensorstore = ">=0.1.65,<0.2"
